# openhydra

./: .gitignore  ARCHITECTURE_ROADMAP_v1.md  BENCHMARK_PATH_A.md  CNAME  CONTRIBUTING.md  Dockerfile  LANDING_LIVE_EDITS.md  LANDING_UPDATE_PLAN.md  LICENSE  Makefile  OpenHydra_Project_Analysis.docx  OpenHydra_masterplan.md  OpenHydra_progress.md  PATH_A_PHASE_2_PLANS.md  README.md  SECURITY.md  codex_prompt.md  codex_prompt_linode_multi_bootstrap.md  codex_prompt_p0_keys.md  docker-compose.ha.yml  docker-compose.yml  mkdocs.yml  models.catalog.json  openhydra_defaults.py  openhydra_logging.py  openhydra_secrets.py  peers.mlx.json  pyproject.toml  pyrightconfig.json  requirements-mlx.txt  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: python-app.yml  rust-network.yml
compression/: __init__.py  autoencoder.py  lz4_codec.py
coordinator/: __init__.py  api_server.py  api_types.py  auto_scaler.py  bandwidth_roles.py  chain.py  chunked_prefill.py  client_cli.py  concentration_guard.py  degradation.py  dflash_draft.py  dflash_driver.py  dflash_integration.py  dflash_telemetry.py  discovery_service.py  economy_service.py  engine.py  failover.py  head_sampler.py  health_scorer.py  health_service.py  inference_service.py  interactive_cli.py  kv_affinity_service.py  layer_coverage.py  ledger_bridge.py  local_engine.py  manual_sharding.py  moe_service.py  mystery_shopper.py  node.py  path_finder.py  peer_selector.py  peer_utils.py  pipeline_service.py  push_receiver.py  rebalancer.py  relay.py  replication_monitor.py  request_batcher.py  (+13 more)
desktop/: README.md  index.html  package.json
desktop/src/: App.tsx  app.js  index.html  main.tsx  styles.css
desktop/src-tauri/: Cargo.toml  tauri.conf.json
desktop/src-tauri/binaries/: openhydra-node-aarch64-apple-darwin
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: README.txt  icon.icns
desktop/src-tauri/resources/: bootstrap.ps1  bootstrap.sh
desktop/src-tauri/src/: lib.rs  main.rs
dht/: __init__.py  bootstrap.py  hivemind_bridge.py  node.py  signpost.py
docs/: Launch_Benchmark_8GB.md  QA_Release_Audit.md  api-reference.md  architecture.md  beta-launch-strategy.md  comparison_petals_exo.md  comparison_petals_exo_analysis.md  contributing.md  index.md  operator-guide.md  petals-comparison.md  quickstart.md  roadmap_code_quality.md  whitepaper.md
docs/sdk/: python.md  typescript.md
economy/: __init__.py  barter.py  postgres.py  state_channel.py  token.py
grounding/: __init__.py  client_rag.py
landing/: index.html
logs/: benchmark_qwen25_specpipe_long.txt  benchmark_qwen25_specpipe_short.txt  benchmark_smollm2_wan_long_full.txt  benchmark_smollm2_wan_short_full.txt
network/: Cargo.toml  build.rs  pyproject.toml
network/src/: activation.rs  behaviour.rs  bootstrap_bin.rs  dht.rs  dlpack.rs  event_loop.rs  identity.rs  lib.rs  mdns.rs  nat.rs  node.rs  proxy.rs  relay.rs  swarm.rs  transport.rs  types.rs
ops/: demo_2mac_coordinator.sh  demo_2mac_sharded.sh  deploy_signposts.sh  increase_ulimit.sh  network_limits.sh  prod_secrets.env.example  public_v1_mainnet_playbook.md
ops/bench/: README.md  gemma4_direct_bench.py  lightning_gemma4.sh  qwen9b_sharded_bench.py
ops/bootstrap/: README.md  bootstrap.service  deploy_all.sh  deploy_libp2p.sh  gen_geo_seed.sh  libp2p-bootstrap.service  nginx-bootstrap.conf.template  setup_nanode.sh
ops/certs/: provision_cert.sh
ops/db/: schema.sql
ops/grafana/: openhydra_dashboard.json
ops/ha/: nginx.conf
ops/nanode-snapshots/: SETUP_GUIDE.md
ops/peers/: setup_nanode_peer.sh
ops/prometheus/: prometheus.yml
ops/terraform/: README.md
peer/: __init__.py  activation_codec.py  autonomous_rebalancer.py  batching.py  bootstrap_config.py  capacity.py  crypto.py  daemon_monitor.py  dht_announce.py  gossip_client.py  hardware.py  identity.py  kv_rollback.py  lan_routing.py  local_discovery.py  local_fast_path.py  mlx_parallel.py  mlx_runtime.py  model_catalog.py  model_shard.py  negotiation_loop.py  p2p_model_cache.py  palu_codec.py  peer.proto  peer_pb2.py  peer_pb2_grpc.py  privacy.py  pytorch_activation_compressor.py  recurrent_tape_recorder.py  reshard_executor.py  seeder_http.py  server.py  swarm_negotiator.py  throughput_bench.py  tls.py
peer/kv_compaction/: __init__.py  _algorithms.py  _beta_inject.py  (+5 more)
plans/: README.md  auto-scaling-policy.md  autonomous-rebalancing.md  memory.md  openhydra-desktop.md  post-hn-launch.md  progress.md  sharded-inference-fixes.md  swarm-inference-optimization.md  universal-ai-os.md  v1.1-hybrid-architecture.md
relay/: relay_service.py
scripts/: bench_kv_compaction.py  benchmark_tps.py  gen_dev_certs.sh  gen_proto.sh  mainnet_canary.sh  optimize_head_budgets.py  raw_mlx_bench.py  run_real_tests_batched.sh  slo_chaos_test.py  swarm_3peer_bench.py  test_sharded_local.py
site/: 404.html  index.html  objects.inv  sitemap.xml
tests/: conftest.py  test_activation_codec.py  test_api_emulation.py  test_api_server.py  test_auditor.py  test_auto_scaler.py  test_autoregressive_sharded.py  test_bandwidth_roles.py  test_barter.py  test_block_verify.py  test_bootstrap_config.py  test_capacity_engine.py  test_chain_compression.py  test_chain_encryption.py  test_chain_failover.py  test_chain_integration.py  test_chunked_prefill.py  test_client_terminated_pipeline.py  test_concentration_guard.py  test_coordinator_batching.py  test_crypto.py  test_daemon_monitor.py  test_dcutr_stats.py  test_degradation.py  test_dflash_drafter.py  test_dflash_driver.py  test_dflash_end_to_end.py  test_dflash_integration.py  test_dflash_telemetry.py  test_dht_announce.py  test_dht_bootstrap.py  test_dht_geo_triangulation.py  test_dht_node.py  test_engine.py  test_engine_bandwidth.py  test_engine_concentration.py  test_engine_degradation.py  test_engine_discovery.py  test_engine_elastic_limits.py  test_engine_seeding.py  (+88 more)
torrent/: __init__.py  genesis.py  seeder.py  session.py
verification/: __init__.py  auditor.py  mystery_shopper.py  redundant.py  reputation.py  toploc.py
web/: index.html
(+72 files in other folders)
