[package]
name = "openhydra-desktop"
version = "0.1.0"
edition = "2021"

[lib]
name = "openhydra_desktop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sysinfo = "0.32"
ureq = { version = "2", features = ["json"] }
